--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,7 @@ on:
 jobs:
   run:
     name: Run
-    runs-on: ${{ matrix.operating-systems }}
-    strategy:
-      matrix:
-        operating-systems: [ubuntu-latest, windows-latest]
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
