--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-versions: ['1.17', '1.18', '1.19']
+        go-versions: ['1.18', '1.19']
 
     steps:
       - uses: actions/checkout@v3
