--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,15 +8,12 @@ jobs:
   run:
     name: Run
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go-versions: ['1.18', '1.19']
 
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: ${{ matrix.go-versions }}
+          go-version: '1.19'
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
